<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">&gt;Human Companion</string>
	
	<!-- Rolls -->
	<string name="parameters">Parameters</string>
	<string name="value">Value</string>
	<string name="threshold">Threshold</string>
	
	<string name="roll">Roll</string>
	<string name="results">Results</string>
	
	<string name="fail">Fail</string>
	<string name="success">Success</string>
	<string name="double_success">2x Success</string>
	
	<string name="white">White</string>
	<string name="black">Black</string>
	
	<!-- Settings -->
	<string name="settings">Settings</string>
	<string name="advanced">Advanced</string>
	
	<string name="use_luck">Luck</string>
	<string name="use_luck_summary">Use "Luck" rule</string>
	
	<string name="use_extra_injury">Bonus injury</string>
	<string name="use_extra_injury_summary">Extra injury for full hits with Stun attacks</string>
	
	<!-- Weapon parameters -->
	<string name="weapon_penetration">Weapon penetration</string>
	<string name="weapon_damage">Weapon damage</string>
	<string name="weapon_damage_type">Weapon damage type</string>
	<string name="injury">Injury</string>
	<string name="stun">Stun</string>

	<!-- Attack/weapon type -->
	<string name="attack_type">Attack type</string>
	<string name="close_combat">Close combat</string>
	<string name="ranged_combat">Ranged combat</string>
	
	<string name="rcf">RCF</string>
	<string name="attack">Attack</string>
	<string name="defense">Defense</string>
	<string name="range">Range</string>
	
	<!-- Armor -->
	<string name="armor">Armor</string>
	<string name="use_armor">Use armor</string>
	
	<string name="armor_coverage">Armor coverage</string>
	<string name="armor_protection">Armor protection</string>
	
	<!-- Attack result -->
	<string name="hit">Hit</string>
	<string name="fullhit">Full hit</string>
	<string name="miss">Miss</string>
	
	<string name="lucky">Lucky</string>
	<string name="unlucky">Unlucky</string>
	
	<string name="no_damage">No damage</string>
	
	<!-- Armor result descriptions -->
	<string name="armor_effect_header_off">Armor not active</string>
	<string name="armor_effect_header_not_covered">Weak spot</string>
	<string name="armor_effect_header_fully_penetrated">Penetrated armor</string>
	<string name="armor_effect_header_partially_penetrated">Softened</string>
	<string name="armor_effect_header_completely_protected">Deflected</string>
	
	<string name="armor_effect_desc_off">\"Use armor\" setting disabled.</string>
	<string name="armor_effect_desc_not_covered">Bypassed armor completely</string>
	<string name="armor_effect_desc_fully_penetrated">Went right through.</string>
	<string name="armor_effect_desc_partially_penetrated">The attack was slowed down.</string>
	<string name="armor_effect_desc_completely_protected">No damage.</string>
	
	
	<!-- Drawer items -->
	<string-array name="drawer_items">
		<item>Roller</item>
		<item>Attack</item>
	</string-array>
	
	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	
	
	
</resources>
