<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				  android:orientation="vertical"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
	>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/parameters"
			style="?android:attr/listSeparatorTextViewStyle"
		/>
		
		<!-- Value sliderbar -->
		<include 
			layout="@layout/template_sliderbar"
			android:id="@+id/slider_value"
		/>
		
		<!-- Threshold sliderbar -->
		<include 
			layout="@layout/template_sliderbar"
			android:id="@+id/slider_threshold"
		/>
	
		<Button
			android:id="@+id/roller_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/roll"
			android:layout_margin="10dp"
		/>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/results"
			style="?android:attr/listSeparatorTextViewStyle"
		/>
		
		<include 
			layout="@layout/template_result"
			android:id="@+id/view_result"
		/>
	</LinearLayout>

</ScrollView>