<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:animateLayoutChanges="true"
>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/parameters"
		style="?android:attr/listSeparatorTextViewStyle"
	/>
	
	<RadioGroup
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<RadioButton 
			android:id="@+id/radio_closecombat"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="true"
			android:text="@string/close_combat"
		/>
		<RadioButton 
			android:id="@+id/radio_rangedcombat"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="true"
			android:text="@string/ranged_combat"
		/>	
		
	</RadioGroup>
	
	<!-- RKF/Attack sliderbar -->
	<include 
		layout="@layout/template_sliderbar"
		android:id="@+id/slider_value"
	/>
	
	<!-- Defense/range sliderbar -->
	<include 
		layout="@layout/template_sliderbar"
		android:id="@+id/slider_threshold"
	/>
	
	<!-- Damage sliderbar -->
	<include 
		layout="@layout/template_sliderbar"
		android:id="@+id/slider_damage"
	/>
	
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/armor"
		style="?android:attr/listSeparatorTextViewStyle"
	/>
	
	<CheckBox
		android:id="@+id/chk_use_armor"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/use_armor" />
	
	<LinearLayout
		android:id="@+id/layout_armor"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:visibility="gone"
	>
		<!-- Penetration sliderbar -->
		<include 
			layout="@layout/template_sliderbar"
			android:id="@+id/slider_penetration"
		/>
		<!-- Armor coverage sliderbar -->
		<include 
			layout="@layout/template_sliderbar"
			android:id="@+id/slider_coverage"
		/>
		<!-- Armor protection max sliderbar -->
		<LinearLayout 
			android:id="@+id/slider_protection"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<!-- The text box-->
			<EditText
				android:id="@+id/textbox_min"
				android:layout_width="64sp"
				android:layout_height="wrap_content"
				android:inputType="number"
				android:maxLength="2"
				android:textSize="32sp"
			/>
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:textSize="32sp"
				android:text="-"
			/>
			
			<EditText
				android:id="@+id/textbox_max"
				android:layout_width="64sp"
				android:layout_height="wrap_content"
				android:inputType="number"
				android:maxLength="2"
				android:textSize="32sp"
			/>
	
			<!-- The slider, including header-->
			<LinearLayout
				android:id="@+id/layout_protection"
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
			>
			
				<TextView
					android:id="@+id/header"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:paddingBottom="0dp"
				/>
		
			</LinearLayout>
	
		</LinearLayout>
		
	</LinearLayout>
	
</LinearLayout>